# mcSIM

./: .gitattributes  .gitignore  .gitmodules  README.md  affine.py  analysis_tools.py  camera_noise.py  dmd_patterns.py  fit.py  fit_psf.py  gauss_beam.py  gnuplot.py  opm_coords.py  otf_tools.py  parts_list.md  phase_retrieval.py  psd.py  pyproject.toml  requirements.txt  setup.py  sim_reconstruction.py  simulate_dmd.py
.github/: workflow.yaml
analysis/: affine.py  analysis_tools.py  camera_noise.py  dmd_patterns.py  fit.py  fit_dmd_affine.py  fit_psf.py  gnuplot.py  localize.py  otf_tools.py  sim_reconstruction.py  simulate_dmd.py  tomography.py
analysis/loc_psf/: fit.py  fit_psf.py  localize.py  rois.py
calibration/: fit_hologram_phase_curvature.py  odt_align_frqs.py  odt_measure_defocus.py  psf_calibration.py  sim_modulation_depth_from_beads.py
docs/: conf.py  daq.rst  dlp6500.rst  dmd_affine.rst  dmd_patterns.rst  dmd_simulation.rst  fft.rst  field_prop.rst  gauss_beam.rst  index.rst  mie_fields.rst  odt.rst  optimize.rst  otf_tools.rst  phase_unwrap.rst  sim.rst  tomography.rst  tools.rst
examples/: calibrate_affine_xform.py  dmd_input_angles_multicolor.py  dmd_solution_explorer_gui.py  find_DMD_SIM_patterns.py  find_multicolor_sim_patterns.py  interactive_dmd_output.py  load_dmd_pattern.py  reconstruct_sim.py  reconstruct_sim_experiment.py  reconstruct_sim_experiment_multichannel.py  reconstruct_sim_gpu_repeatedly.py  reconstruct_sim_simulated.py  reconstruct_sim_simulated_single.py  reconstruct_sim_simulated_timelapse.py  reconstruction_sim_gpu_repeatedly.py  reconstruction_sim_simulated_timelapse.py  simulate_dmd_diffraction_fourier_plane.py  simulate_dmd_diffraction_pattern.py  simulate_dmd_fourier_plane.py  simulate_dmd_pattern.py  simulate_multicolor_sim_patterns_1d.py  solve_blaze_condition.py  solve_multicolor_blaze_condition.py
examples/data/: 2020_05_19_otf_fit_blue.pkl  2021-02-03_09;43;06_affine_xform_blue_z=0.pkl  2021-02-03_09;43;06_affine_xform_green_z=0.pkl  argosim_line_pairs.tif  sim_patterns_period=6.01_nangles=3.pkl  sim_patterns_period=6.82_nangles=3.pkl
expt_ctrl/: MMStartup.bsh  SIM.cfg  SIM_ni_daq.cfg  SIM_ni_daq_ham.cfg  dlp6500.py  load_dmd_pattern.py  run_odt.bsh  run_odt.py  run_patterns_software.bsh  run_sim_triggerscop.bsh  set_dmd_odt_pattern.py  set_dmd_sim.py  setup_optotune_mre2.py
expt_ctrl/dmd_sim_umanager_plugin/: .classpath
instruments/: dlp6500.py  rigol_scope.py
mcsim/analysis/: analysis_tools.py  camera_noise.py  dmd_patterns.py  fft.py  field_prop.py  fit_dmd_affine.py  gauss_beam.py  mie_fields.py  mm_io.py  odt_patterns.py  optimize.py  otf_tools.py  phase_unwrap.py  prox_tv.py  sim_reconstruction.py  simulate_dmd.py  tomography.py  visualize.py
mcsim/expt_ctrl/: MMStartup.bsh  SIM_ni_daq.cfg  SIM_ni_daq_ham.cfg  affine_transformations.json  blackfly_flir_cam.cfg  cameras_affine_transformations.json  config.json  daq.py  daq_config.json  daq_map.py  dlp6500.py  dmd_affine_transformations.json  dmd_config.json  expt_map.py  load_dmd_pattern.py  otf_calibration.json  phantom_cam.py  program_sim_odt.py  run_odt.bsh  run_odt.py  scan_parameter.bsh  set_dmd_odt_pattern.py  set_dmd_pattern_firmware.py  set_dmd_sim.py  setup_optotune_mre2.py  sim_odt_nidaq_c1.cfg  sim_odt_nidaq_c2.cfg
parts/: 470nm_laser_mount.f3d  470nm_laser_mount.stl  532nm_laser_mount.f3d  WFA2001C_option_quarter20.f3d  bnc_mount.f3d  bnc_mount.stl  hexagon.f3d  parts_list.md  pmt_mount.f3d  pmt_mount.stl  pmt_mount_drawing.dwg
psd/: psd.py
tests/: affine_unittest.py  dmd_pattern_unittest.py  mie_unittest.py  psf_unittest.py  sim_unittest.py  tomography_unittest.py  tools_unittest.py
(+3 files in other folders)
